ci: enable pip cache + coverage report

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    env:
-      PYTHONPATH: ${{ github.workspace }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -21,23 +19,13 @@ jobs:
           python-version: "3.11"
           cache: "pip"
 
-      - name: Upgrade pip tooling
-        run: |
-          python -m pip install --upgrade pip wheel setuptools
-
       - name: Install deps
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install pytest-cov
 
-      - name: Show env (debug)
-        run: |
-          python - << 'PY'
-          import sys,os
-          print("CWD:", os.getcwd())
-          print("PYTHONPATH:", os.environ.get("PYTHONPATH"))
-          print("sys.path[0:3]:", sys.path[:3])
-          PY
-
-      - name: Run pytest
-        run: pytest -q
-
+      - name: Run pytest (with coverage)
+        run: pytest -q --cov=. --cov-report=term-missing
+        env:
+          PYTHONPATH: ${{ github.workspace }}
