--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,30 +2,59 @@
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      PYTHONPATH: ${{ github.workspace }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
           cache: "pip"
-
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest-cov
+      - name: Pytest (with coverage)
+        run: pytest --cov=. --cov-report=term --cov-report=xml -q
+      - name: Store coverage
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage
+          path: |
+            ./.coverage
+            ./coverage.xml
+          if-no-files-found: ignore
 
-      - name: Run pytest (with coverage)
-        run: pytest -q --cov=. --cov-report=term-missing
-        env:
-          PYTHONPATH: ${{ github.workspace }}
+  e2e:
+    runs-on: ubuntu-latest
+    needs: test
+    env:
+      PYTHONPATH: ${{ github.workspace }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache: "pip"
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Run e2e demo
+        run: python -m scripts.e2e_demo
+      - name: Upload e2e artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: e2e-report
+          path: |
+            outputs/**
+            logs/**
+          if-no-files-found: ignore
