--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-﻿name: CI
+name: CI
 
 on:
   push:
@@ -21,6 +21,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+          pip install -r dev-requirements.txt
+          pip install -r dev-requirements.txt
           pip install pytest-cov
       - name: Pytest (with coverage)
         run: pytest --cov=. --cov-report=term --cov-report=xml --cov-fail-under=85 -q
@@ -48,6 +51,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+          pip install -r dev-requirements.txt
+          pip install -r dev-requirements.txt
       - name: Run e2e demo (legacy)
         run: python -m scripts.e2e_demo
       - name: Run e2e demo (baseline, JSON outputs)
