--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,70 +1,28 @@
-name: CI
-
+﻿name: CI
 on:
   push:
-    branches: ["main"]
+    branches: [ main ]
   pull_request:
-    branches: ["main"]
+    branches: [ main ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    env:
-      PYTHONPATH: ${{ github.workspace }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
-          cache: "pip"
+          python-version: '3.11'
+          cache: 'pip'
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-          pip install -r dev-requirements.txt
-          pip install -r dev-requirements.txt
-          pip install pytest-cov
-      - name: Pytest (with coverage)
-        run: pytest --cov=. --cov-report=term --cov-report=xml --cov-fail-under=85 -q
-      - name: Store coverage
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage
-          path: |
-            ./.coverage
-            ./coverage.xml
-          if-no-files-found: ignore
-
-  e2e:
-    runs-on: ubuntu-latest
-    needs: test
-    env:
-      PYTHONPATH: ${{ github.workspace }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-          cache: "pip"
-      - name: Install deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-          pip install -r dev-requirements.txt
-          pip install -r dev-requirements.txt
-      - name: Run e2e demo (legacy)
-        run: python -m scripts.e2e_demo
-      - name: Run e2e demo (baseline, JSON outputs)
-        run: python -m scripts.e2e_demo_baseline
-      - name: Validate baseline artifacts
-        run: |
-          test -f outputs/e2e_baseline.json
-          python - <<'PY'
-          import json
-          with open('outputs/e2e_baseline.json', encoding='utf-8') as f:
-              d = json.load(f)
-          assert 'C_E' in d and 'F_info' in d and 'energy' in d
-          print('Baseline JSON looks OK.')
-          PY
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f dev-requirements.txt ]; then pip install -r dev-requirements.txt; fi
+          pip install pre-commit mypy pytest
+      - name: Pre-commit
+        run: pre-commit run -a
+      - name: Type check
+        run: mypy .
+      - name: Tests
+        run: pytest -q
