--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,28 +1,52 @@
 ﻿name: CI
 on:
   push:
-    branches: [ main ]
+    branches: [main]
+    paths-ignore:
+      - "**/*.md"
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.10", "3.11", "3.12"]
+
+    # Aynı branch’te yeni push gelirse eski koşuyu iptal et
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
-          cache: 'pip'
+          python-version: ${{ matrix.python-version }}
+          cache: "pip"
+
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           if [ -f dev-requirements.txt ]; then pip install -r dev-requirements.txt; fi
-          pip install pre-commit mypy pytest
+          pip install pre-commit mypy pytest pytest-cov
+
       - name: Pre-commit
         run: pre-commit run -a
+
       - name: Type check
         run: mypy .
+
       - name: Tests
-        run: pytest -q
+        run: pytest -q --cov=. --cov-report=xml
+
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-xml-${{ matrix.python-version }}
+          path: coverage.xml
+          if-no-files-found: ignore
